<resources>
    <string name="app_name">Daily Look Helper</string>
    <string name="title_weather">Weather</string>
    <string name="title_clothing">Clothing</string>
    <string name="title_profile">Profile</string>
    <string name="toolbar_settings">Settings</string>
    <string name="city_name_ph">Country</string>
    <string name="temperature_current_ph">Current temperature</string>
    <string name="app_logo">App logo</string>
    <string name="rain_volume">Rain volume</string>
    <string name="rain_volume_in_3_hours">Rain volume in 3 hours:</string>
    <string name="current_weather">Current weather</string>
    <string name="user_s_avatar">User\'s avatar</string>
    <string name="user_s_name">User\'s name</string>
    <string name="open_clothes_list">Open clothes list</string>
    <string name="logout">Logout</string>
    <string name="user_s_e_mail">User\'s e-mail</string>
    <string name="rain">Rain:</string>
    <string name="_0">0</string>
    <string name="wind">Wind</string>
    <string name="snow">Snow</string>
    <string name="weather_description">Weather description</string>
    <string name="delete">Delete</string>
    <string name="choose_type">Choose type</string>
    <string name="save">Save</string>
    <string name="color_red">Press SAVE to recognise</string>
</resources>
