<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/weather_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/current_weather"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/temperature_current_ph"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        android:text="@string/weather_description"
        android:textAlignment="center" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/wind"/>

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:text="0 m/s"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rain"/>

            <TextView
                android:id="@+id/rain_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:text="@string/_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/snow"/>

            <TextView
                android:id="@+id/snow_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:text="@string/_0"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>